# CaptionLens

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt  启动 Teams 字幕翻译器.bat
docs/: FINAL_ACCEPTANCE_MATRIX.md  GITHUB_RESOURCES.md  HANDOFF_V0_2.md  MACOS_PACKAGING.md  MAC_TEST_RESULT_TEMPLATE.txt  PACKAGING_NEXT_STEPS.md  README_MACOS.txt  REBUILD_PLAN.md  SEND_TO_MAC_TESTER.txt  STATUS_2026_06_04.md
packaging/: teams-caption-translator-macos.spec  teams-caption-translator.iss  teams-caption-translator.spec
scripts/: audit_macos_release_from_windows.ps1  audit_release_readiness.ps1  build_installer.ps1  build_macos.sh  check_macos_release.sh  check_runtime.py  export_macos_support_bundle.sh  find_python.ps1  frozen_app.py  installer_stub.py  launch_app.py  make_self_extracting_installer.py  prepare_macos_release.sh  prepare_macos_source_package.ps1  prepare_release_package.ps1  prepare_release_package.py  prepare_sandbox_release_check.ps1  run.bat  uia_dump.ps1  verify_release.ps1
src/teams_caption_translator/: __init__.py  caption_filter.py  caption_stabilizer.py  capture.py  config.py  dpi.py  main.py  maintenance.py  ocr.py  pipeline.py  platform_diagnostics.py  runtime_paths.py  text_utils.py  translator.py  ui.py
tests/: test_caption_filter.py  test_caption_stabilizer.py  test_pipeline_caption_parse.py  test_text_utils.py
