[project]
name = "teams-caption-translator"
version = "0.1.0"
description = "Low-latency Teams caption OCR translator MVP for Windows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mss>=9.0.1",
  "pillow>=10.0.0",
  "deep-translator>=1.11.4",
  "easyocr>=1.7.2",
]

[project.optional-dependencies]
fast-capture = ["dxcam>=0.0.5"]
rapidocr = ["rapidocr-onnxruntime>=1.3.24"]

[project.scripts]
teams-caption-translator = "teams_caption_translator.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
